[Text thumbnailer] Don't show text preview for .directory and .flatpakref files

Summary:
The text thumbnailer currently excludes .directory files from receiving text file
thumbnails, but does not do the same for .directory and .flatpakref files which are
the same things (actually text files that don't look, feel, or behave like text files).

This patch extends the same logic to those types of files as well, making them not
receive text previews and instead show their base mimetype or icon (if defined in the
file).

BUG: 410561
BUG: 400201
FIXED-IN: 19.08.0

Test Plan: {F7161776, size=full}

Reviewers: #vdg, #frameworks, broulik

Reviewed By: broulik

Subscribers: kde-frameworks-devel, kfm-devel

Tags: #dolphin, #frameworks

Differential Revision: https://phabricator.kde.org/D22936